--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="button_yes">Yes</string>
     <string name="button_no">No</string>
     <string name="description_inserted_user">User data saved</string>
+    <string name="error_bad_credentials">Bad credentials error</string>
 </resources>
